# flext-target-ldif

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  Makefile.build  README.md  pyproject.toml  pyrightconfig.json
docs/: index.md
reports/: security.json
scripts/: README.md
src/flext_target_ldif/: __init__.py  __version__.py  cli.py  config.py  di_container.py  exceptions.py  ldif_writer.py  models.py  sinks.py  target.py  target_client.py  target_config.py  target_exceptions.py  target_models.py  target_services.py  transformers.py  typings.py  validation.py  writer.py
src/flext_target_ldif/infrastructure/: __init__.py  di_container.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_ldif_writer.py  test_sinks.py  test_target.py  test_transformers.py  test_validation.py  test_writer.py
